--- a/html/de/privacy-policy.html
+++ b/html/de/privacy-policy.html
@@ -18,7 +18,7 @@
                 </div>
                 <div>
                     <dt>Kontakt</dt>
-                    <dd>Telefon: -<br />E-Mail: <a href="mailto:schaces.fehrenbacher@gmail.com">schaces.fehrenbacher@gmail.com</a></dd>
+                    <dd>Telefon: -<br />E-Mail: <a href="mailto:fehrenworks@gmail.com">fehrenworks@gmail.com</a></dd>
                 </div>
             </dl>
             <section class="legal__section">
@@ -47,7 +47,7 @@
             </section>
             <section class="legal__section">
                 <h2>Deine Rechte</h2>
-                <p>Du kannst Auskunft, Berichtigung, Übertragbarkeit oder Löschung deiner Daten per E-Mail an <a href="mailto:schaces.fehrenbacher@gmail.com">schaces.fehrenbacher@gmail.com</a> anfordern. Außerdem steht dir das Recht zu, eine Beschwerde bei einer Datenschutzaufsichtsbehörde einzureichen.</p>
+                <p>Du kannst Auskunft, Berichtigung, Übertragbarkeit oder Löschung deiner Daten per E-Mail an <a href="mailto:fehrenworks@gmail.com">fehrenworks@gmail.com</a> anfordern. Außerdem steht dir das Recht zu, eine Beschwerde bei einer Datenschutzaufsichtsbehörde einzureichen.</p>
             </section>
         </section>
     </main>
