--- a/html/en/privacy-policy.html
+++ b/html/en/privacy-policy.html
@@ -18,7 +18,7 @@
                 </div>
                 <div>
                     <dt>Contact</dt>
-                    <dd>Phone: -<br />Email: <a href="mailto:schaces.fehrenbacher@gmail.com">schaces.fehrenbacher@gmail.com</a></dd>
+                    <dd>Phone: -<br />Email: <a href="mailto:fehrenworks@gmail.com">fehrenworks@gmail.com</a></dd>
                 </div>
             </dl>
             <section class="legal__section">
@@ -47,7 +47,7 @@
             </section>
             <section class="legal__section">
                 <h2>Your rights</h2>
-                <p>You may request access, correction, portability, or deletion of your data by contacting us at <a href="mailto:schaces.fehrenbacher@gmail.com">schaces.fehrenbacher@gmail.com</a>. You also have the right to lodge a complaint with your local data protection authority.</p>
+                <p>You may request access, correction, portability, or deletion of your data by contacting us at <a href="mailto:fehrenworks@gmail.com">fehrenworks@gmail.com</a>. You also have the right to lodge a complaint with your local data protection authority.</p>
             </section>
         </section>
     </main>
