--- a/html/en/legal-notice.html
+++ b/html/en/legal-notice.html
@@ -18,7 +18,7 @@
                 </div>
                 <div>
                     <dt>Contact</dt>
-                    <dd>Phone: -<br />E-Mail: <a href="mailto:schaces.fehrenbacher@gmail.com">schaces.fehrenbacher@gmail.com</a></dd>
+                    <dd>Phone: -<br />E-Mail: <a href="mailto:fehrenworks@gmail.com">fehrenworks@gmail.com</a></dd>
                 </div>
             </dl>
             <section class="legal__section">
