add home btn to game over state

--- a/index.html
+++ b/index.html
@@ -384,7 +384,10 @@
             <div class="modal__content">
                 <h2 id="result-title" class="modal__title"></h2>
                 <p id="result-text" class="modal__text"></p>
-                <button id="result-button" class="modal__button" type="button">Weiter</button>
+                <div class="modal__actions">
+                    <button id="result-button" class="modal__button modal__button--primary" type="button">Weiter</button>
+                    <button id="result-home-button" class="modal__button modal__button--secondary" type="button" hidden>Home</button>
+                </div>
             </div>
         </div>
     </div>
