added version tag to main menu

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 <p id="auth-error" class="auth__error" hidden></p>
             </div>
         </div>
+        <div class="main-menu__version" aria-label="Game version">BETA v0.1</div>
     </div>
     <div id="level-select" class="level-select" hidden>
         <div class="level-select__panel">
