--- a/index.html
+++ b/index.html
@@ -306,6 +306,9 @@
                     <section class="tutorial__section">
                         <h2 class="tutorial__section-title" data-i18n-key="tutorial.section.matches">Matches</h2>
                         <div class="tutorial__card">
+                            <p class="tutorial__section-lead" data-i18n-key="tutorial.matches.lead">
+                                Bombs are activated by matching the right color. There are 5 different colors and the match has to be of the same color.
+                            </p>
                             <ul class="tutorial__list tutorial__list--compact" role="list">
                                 <li class="tutorial__item">
                                     <span class="tutorial__item-title" data-i18n-key="tutorial.matches.threeTitle">Match 3</span>
@@ -338,6 +341,14 @@
                                     </span>
                                 </li>
                             </ul>
+                        </div>
+                    </section>
+                    <section class="tutorial__section">
+                        <h2 class="tutorial__section-title" data-i18n-key="tutorial.section.mechanics">Game Mechanics</h2>
+                        <div class="tutorial__card">
+                            <p class="tutorial__section-lead" data-i18n-key="tutorial.mechanics.multiplierText">
+                                The score multiplier rises after strong moves, drops after weak or empty moves, and applies to every point you earn.
+                            </p>
                         </div>
                     </section>
                     <section class="tutorial__section">
