add edit btn to profile state

--- a/index.html
+++ b/index.html
@@ -518,6 +518,19 @@
                         </span>
                     </button>
                     <div class="account__top-title" data-i18n-key="account.title">My Account</div>
+                    <button
+                        id="account-edit"
+                        class="account__edit-button"
+                        type="button"
+                        aria-label="Edit account"
+                    >
+                        <img
+                            src="assets/images/edit.svg"
+                            alt=""
+                            class="account__edit-icon"
+                            aria-hidden="true"
+                        />
+                    </button>
                 </div>
             </div>
             <div class="account__content">
