--- a/index.html
+++ b/index.html
@@ -638,6 +638,12 @@
     >
         <span id="shuffle-notice-text" class="shuffle-notice__text"></span>
     </div>
+    <div id="cutscene" class="cutscene" hidden aria-hidden="true" role="status">
+        <div class="cutscene__content">
+            <img src="assets/images/mira.png" alt="Mira" class="cutscene__portrait" />
+            <p id="cutscene-line" class="cutscene__line"></p>
+        </div>
+    </div>
 
     <div id="result-modal" class="modal">
         <div class="modal__dialog" role="dialog" aria-labelledby="result-title" aria-describedby="result-text">
