add time goal to level 40 and 45

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                     <div class="level-select__details-card">
                         <div id="level-select-selected-label" class="level-select__selected-label">Level 1</div>
                         <div id="level-select-meta" class="level-select__meta"></div>
+                        <div id="level-select-time-hint" class="level-select__time-hint" hidden></div>
                         <div class="level-select__goals-title" data-i18n-key="levelSelect.goalsTitle">Goals</div>
                         <ul id="level-select-goals" class="level-select__goals" role="list"></ul>
                         <button id="level-select-play" class="level-select__play" type="button"></button>
