change option menu icon

--- a/index.html
+++ b/index.html
@@ -37,11 +37,20 @@
     <script type="module" src="dist/main.js"></script>
 </head>
 <body class="match-app match-app--menu">
-    <button id="options-toggle" class="options-toggle" type="button" aria-haspopup="dialog" aria-expanded="false" aria-controls="options-modal">
+    <button
+        id="options-toggle"
+        class="options-toggle"
+        type="button"
+        aria-haspopup="dialog"
+        aria-expanded="false"
+        aria-controls="options-modal"
+        aria-labelledby="options-toggle-label"
+    >
         <span class="options-toggle__icon" aria-hidden="true">
-            <span class="options-toggle__line"></span>
-            <span class="options-toggle__line"></span>
-            <span class="options-toggle__line"></span>
+            <img src="assets/images/settings.svg" alt="" />
+        </span>
+        <span id="options-toggle-label" class="options-toggle__assistive" data-i18n-key="options.title">
+            Options
         </span>
     </button>
 
