--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="preload" as="image" href="/assets/images/main-menu-background.webp"> <!--media="(max-width: 780px)"-->
     <link rel="preload" as="image" href="/assets/images/main-menu-bg-landscape.webp"> <!--media="(min-width: 781px)"-->
 
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/match-app.css" />
     <link rel="stylesheet" href="css/options-toggle.css" />
     <link rel="stylesheet" href="css/main-menu.css" />
