--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="preload" as="image" href="/assets/images/main-menu-bg-landscape.webp"> <!--media="(min-width: 781px)"-->
 
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/default-menu.css" />
     <link rel="stylesheet" href="css/match-app.css" />
     <link rel="stylesheet" href="css/options-toggle.css" />
     <link rel="stylesheet" href="css/main-menu.css" />
@@ -202,14 +203,14 @@
         </div>
     </div>
 
-    <div id="shop" class="shop" hidden>
-        <div class="shop__card">
-            <div class="shop__scroll">
-                <div class="shop__sticky-top">
-                    <div class="shop__top-bar">
+    <div id="shop" class="shop default-menu" hidden>
+        <div class="shop__card default-menu__panel">
+            <div class="shop__scroll default-menu__scroll">
+                <div class="shop__sticky-top default-menu__sticky-top">
+                    <div class="shop__top-bar default-menu__top-bar">
                         <button
                             id="shop-close"
-                            class="shop__back-button shop__back-button--top"
+                            class="shop__back-button shop__back-button--top default-menu__back-button"
                             type="button"
                             aria-labelledby="shop-back-label"
                         >
@@ -225,16 +226,16 @@
                             >
                                 <path d="M15 7l-6 5.5L15 18" />
                             </svg>
-                            <span
-                                id="shop-back-label"
-                                class="shop__assistive-text"
-                                data-i18n-key="button.back"
-                            >
+                        <span
+                            id="shop-back-label"
+                            class="shop__assistive-text default-menu__assistive-text"
+                            data-i18n-key="button.back"
+                        >
                                 Back
                             </span>
                         </button>
-                        <div class="shop__top-title" data-i18n-key="shop.title">Sugar Shop</div>
-                        <div class="shop__top-spacer" aria-hidden="true"></div>
+                        <div class="shop__top-title default-menu__top-title" data-i18n-key="shop.title">Sugar Shop</div>
+                        <div class="shop__top-spacer default-menu__top-spacer" aria-hidden="true"></div>
                     </div>
                     <div class="shop__coins-row">
                         <img src="assets/images/sugar_coin_icon.webp" alt="" class="shop__coins-icon" aria-hidden="true" />
@@ -248,14 +249,14 @@
         </div>
     </div>
 
-    <div id="tutorial" class="tutorial" hidden>
-        <div class="tutorial__panel">
-            <div class="tutorial__scroll">
-                <div class="tutorial__sticky-top">
-                    <div class="tutorial__top-bar">
+    <div id="tutorial" class="tutorial default-menu" hidden>
+        <div class="tutorial__panel default-menu__panel">
+            <div class="tutorial__scroll default-menu__scroll">
+                <div class="tutorial__sticky-top default-menu__sticky-top">
+                    <div class="tutorial__top-bar default-menu__top-bar">
                         <button
                             id="tutorial-back"
-                            class="tutorial__back-button"
+                            class="tutorial__back-button default-menu__back-button"
                             type="button"
                             aria-labelledby="tutorial-back-label"
                         >
@@ -271,16 +272,16 @@
                             >
                                 <path d="M15 7l-6 5.5L15 18" />
                             </svg>
-                            <span
-                                id="tutorial-back-label"
-                                class="tutorial__assistive-text"
-                                data-i18n-key="button.back"
-                            >
+                        <span
+                            id="tutorial-back-label"
+                            class="tutorial__assistive-text default-menu__assistive-text"
+                            data-i18n-key="button.back"
+                        >
                                 Back
                             </span>
                         </button>
-                        <div class="tutorial__top-title" data-i18n-key="tutorial.title">Candy Guide</div>
-                        <div class="tutorial__top-spacer" aria-hidden="true"></div>
+                        <div class="tutorial__top-title default-menu__top-title" data-i18n-key="tutorial.title">Candy Guide</div>
+                        <div class="tutorial__top-spacer default-menu__top-spacer" aria-hidden="true"></div>
                     </div>
                 </div>
                 <div class="tutorial__content">
@@ -424,13 +425,13 @@
         </div>
     </div>
 
-    <div id="leaderboard" class="leaderboard" hidden>
-        <div class="leaderboard__panel">
-            <div class="leaderboard__sticky-top">
-                <div class="leaderboard__top-bar">
+    <div id="leaderboard" class="leaderboard default-menu" hidden>
+        <div class="leaderboard__panel default-menu__panel">
+            <div class="leaderboard__sticky-top default-menu__sticky-top">
+                <div class="leaderboard__top-bar default-menu__top-bar">
                     <button
                         id="leaderboard-back"
-                        class="leaderboard__back-button"
+                        class="leaderboard__back-button default-menu__back-button"
                         type="button"
                         aria-labelledby="leaderboard-back-label"
                     >
@@ -448,62 +449,64 @@
                         </svg>
                         <span
                             id="leaderboard-back-label"
-                            class="leaderboard__assistive-text"
+                            class="leaderboard__assistive-text default-menu__assistive-text"
                             data-i18n-key="leaderboard.back"
                         >
                             Back to menu
                         </span>
                     </button>
-                    <div class="leaderboard__top-title" data-i18n-key="leaderboard.title">Leaderboard</div>
-                    <div class="leaderboard__top-spacer" aria-hidden="true"></div>
+                    <div class="leaderboard__top-title default-menu__top-title" data-i18n-key="leaderboard.title">Leaderboard</div>
+                    <div class="leaderboard__top-spacer default-menu__top-spacer" aria-hidden="true"></div>
                 </div>
                 <p id="leaderboard-subtitle" class="leaderboard__path-line">Level Mode → Global → 0 entries</p>
             </div>
-            <div class="leaderboard__filters">
-                <nav class="leaderboard__mode-navigation" role="tablist" aria-label="Leaderboard modes">
-                    <button class="leaderboard__chip leaderboard__chip--active" type="button" id="leaderboard-mode-level" role="tab">
-                        Level Mode
-                    </button>
-                    <button class="leaderboard__chip leaderboard__chip--secondary" type="button" id="leaderboard-mode-blocker" role="tab">
-                        Blocker Mode
-                    </button>
-                    <button class="leaderboard__chip leaderboard__chip--secondary" type="button" id="leaderboard-mode-time" role="tab">
-                        Time Mode
-                    </button>
-                </nav>
-                <div class="leaderboard__scope-group">
-                    <label class="leaderboard__scope-label" for="leaderboard-scope-select" data-i18n-key="leaderboard.scope.label">Scope</label>
-                    <div class="leaderboard__scope-select-wrap">
-                        <select id="leaderboard-scope-select" class="leaderboard__scope-select">
-                            <option
-                                id="leaderboard-scope-global-option"
-                                value="global"
-                                data-i18n-key="leaderboard.scope.global"
-                            >
-                                Global
-                            </option>
-                            <option
-                                id="leaderboard-scope-personal-option"
-                                value="personal"
-                                data-i18n-key="leaderboard.scope.personal"
-                            >
-                                Personal
-                            </option>
-                        </select>
+            <div class="leaderboard__scroll default-menu__scroll">
+                <div class="leaderboard__filters">
+                    <nav class="leaderboard__mode-navigation" role="tablist" aria-label="Leaderboard modes">
+                        <button class="leaderboard__chip leaderboard__chip--active" type="button" id="leaderboard-mode-level" role="tab">
+                            Level Mode
+                        </button>
+                        <button class="leaderboard__chip leaderboard__chip--secondary" type="button" id="leaderboard-mode-blocker" role="tab">
+                            Blocker Mode
+                        </button>
+                        <button class="leaderboard__chip leaderboard__chip--secondary" type="button" id="leaderboard-mode-time" role="tab">
+                            Time Mode
+                        </button>
+                    </nav>
+                    <div class="leaderboard__scope-group">
+                        <label class="leaderboard__scope-label" for="leaderboard-scope-select" data-i18n-key="leaderboard.scope.label">Scope</label>
+                        <div class="leaderboard__scope-select-wrap">
+                            <select id="leaderboard-scope-select" class="leaderboard__scope-select">
+                                <option
+                                    id="leaderboard-scope-global-option"
+                                    value="global"
+                                    data-i18n-key="leaderboard.scope.global"
+                                >
+                                    Global
+                                </option>
+                                <option
+                                    id="leaderboard-scope-personal-option"
+                                    value="personal"
+                                    data-i18n-key="leaderboard.scope.personal"
+                                >
+                                    Personal
+                                </option>
+                            </select>
+                        </div>
                     </div>
                 </div>
+                <ul id="leaderboard-list" class="leaderboard__list"></ul>
             </div>
-            <ul id="leaderboard-list" class="leaderboard__list"></ul>
         </div>
     </div>
 
-    <div id="account" class="account" hidden>
-        <div class="account__panel">
-            <div class="account__sticky-top">
-                <div class="account__top-bar">
+    <div id="account" class="account default-menu" hidden>
+        <div class="account__panel default-menu__panel">
+            <div class="account__sticky-top default-menu__sticky-top">
+                <div class="account__top-bar default-menu__top-bar">
                     <button
                         id="account-back"
-                        class="account__back-button"
+                        class="account__back-button default-menu__back-button"
                         type="button"
                         aria-labelledby="account-back-label"
                     >
@@ -521,16 +524,16 @@
                         </svg>
                         <span
                             id="account-back-label"
-                            class="account__assistive-text"
+                            class="account__assistive-text default-menu__assistive-text"
                             data-i18n-key="button.back"
                         >
                             Back
                         </span>
                     </button>
-                    <div class="account__top-title" data-i18n-key="account.title">My Account</div>
+                    <div class="account__top-title default-menu__top-title" data-i18n-key="account.title">My Account</div>
                     <button
                         id="account-edit"
-                        class="account__edit-button"
+                        class="account__edit-button default-menu__back-button"
                         type="button"
                         aria-label="Edit account"
                     >
@@ -543,57 +546,59 @@
                     </button>
                 </div>
             </div>
-            <div class="account__content">
-                <div class="account__field">
-                    <label class="account__field-label" for="account-name" data-i18n-key="account.field.name">Name</label>
-                    <div class="account__name-row">
-                        <input
-                            id="account-name"
-                            class="account__name-input"
-                            type="text"
-                            maxlength="128"
-                            aria-describedby="account-feedback"
-                            autocomplete="name"
-                            inputmode="text"
-                            spellcheck="false"
-                        />
+            <div class="account__scroll default-menu__scroll">
+                <div class="account__content">
+                    <div class="account__field">
+                        <label class="account__field-label" for="account-name" data-i18n-key="account.field.name">Name</label>
+                        <div class="account__name-row">
+                            <input
+                                id="account-name"
+                                class="account__name-input"
+                                type="text"
+                                maxlength="128"
+                                aria-describedby="account-feedback"
+                                autocomplete="name"
+                                inputmode="text"
+                                spellcheck="false"
+                            />
+                            <button
+                                id="account-save-name"
+                                class="account__save-button"
+                                type="button"
+                                data-i18n-key="account.name.saveButton"
+                            >
+                                Save name
+                            </button>
+                        </div>
+                        <p id="account-feedback" class="account__feedback" aria-live="polite"></p>
+                    </div>
+                    <p id="account-status" class="account__status"></p>
+                    <div class="account__actions">
                         <button
-                            id="account-save-name"
-                            class="account__save-button"
+                            id="delete-progress"
+                            class="options-modal__action options-modal__action--danger"
                             type="button"
-                            data-i18n-key="account.name.saveButton"
+                            data-i18n-key="options.deleteProgress"
                         >
-                            Save name
+                            Delete game progress
+                        </button>
+                        <button
+                            id="delete-account"
+                            class="options-modal__action options-modal__action--danger"
+                            type="button"
+                            data-i18n-key="account.deleteAccount"
+                        >
+                            Delete account
+                        </button>
+                        <button
+                            id="logout-button"
+                            class="options-modal__action options-modal__action--secondary"
+                            type="button"
+                            data-i18n-key="account.logoutGoogle"
+                        >
+                            Logout from Google
                         </button>
                     </div>
-                    <p id="account-feedback" class="account__feedback" aria-live="polite"></p>
-                </div>
-                <p id="account-status" class="account__status"></p>
-                <div class="account__actions">
-                    <button
-                        id="delete-progress"
-                        class="options-modal__action options-modal__action--danger"
-                        type="button"
-                        data-i18n-key="options.deleteProgress"
-                    >
-                        Delete game progress
-                    </button>
-                    <button
-                        id="delete-account"
-                        class="options-modal__action options-modal__action--danger"
-                        type="button"
-                        data-i18n-key="account.deleteAccount"
-                    >
-                        Delete account
-                    </button>
-                    <button
-                        id="logout-button"
-                        class="options-modal__action options-modal__action--secondary"
-                        type="button"
-                        data-i18n-key="account.logoutGoogle"
-                    >
-                        Logout from Google
-                    </button>
                 </div>
             </div>
         </div>
