--- a/index.html
+++ b/index.html
@@ -607,33 +607,30 @@
 
     <div id="hud" class="hud">
         <div class="hud__row hud__row--top">
-            <div class="hud__top-left">
-                <div id="level-card" class="hud__card hud__card--level hud__stat-pill">
-                    <div class="hud__level-row">
-                        <span class="hud__label hud__label--inline">Lvl</span>
-                        <span id="level" class="hud__value hud__value--inline">1</span>
-                    </div>
-                    <div id="difficulty" class="hud__difficulty" style="display: none">Easy</div>
-                </div>
-                <div id="moves-card" class="hud__moves">
-                    <span id="moves-label" class="hud__label hud__label--moves" data-i18n-key="hud.label.moves">Moves</span>
-                    <span id="moves" class="hud__value hud__value--moves">20</span>
-                </div>
+            <div class="hud__top-stat hud__top-stat--level">
+                <span id="level" class="hud__top-stat-value">1</span>
+                <span class="hud__top-stat-label">Lvl</span>
+            </div>
+
+            <div id="moves-card" class="hud__top-stat hud__top-stat--moves">
+                <span id="moves" class="hud__top-stat-value">20</span>
+                <span id="moves-label" class="hud__top-stat-label" data-i18n-key="hud.label.moves">Moves</span>
             </div>
 
             <div class="hud__profile-wrapper">
-                <div class="hud__profile">
+                <div id="level-card" class="hud__profile-ring">
                     <img src="assets/images/mira-profile.png" alt="Mira" class="hud__profile-image" />
-                    <div id="hud-speech-bubble" class="hud__speech-bubble" hidden>
-                        <span id="hud-speech-icon" class="hud__speech-icon" aria-hidden="true"></span>
-                        <span id="hud-speech-text" class="hud__speech-text"></span>
-                    </div>
+                </div>
+                <div id="difficulty" class="hud__difficulty" style="display: none">Easy</div>
+                <div id="hud-speech-bubble" class="hud__speech-bubble" hidden>
+                    <span id="hud-speech-icon" class="hud__speech-icon" aria-hidden="true"></span>
+                    <span id="hud-speech-text" class="hud__speech-text"></span>
                 </div>
             </div>
 
-            <div class="hud__multiplier-pill">
-                <span class="hud__multiplier-label" data-i18n-key="hud.label.multiplier">Mult.</span>
-                <span id="hud-multiplier" class="hud__multiplier-value">x1.00</span>
+            <div class="hud__top-stat hud__top-stat--multiplier">
+                <span id="hud-multiplier" class="hud__top-stat-value">x1.00</span>
+                <span class="hud__top-stat-label" data-i18n-key="hud.label.multiplier">Mult.</span>
             </div>
         </div>
 
