update recording state

--- a/index.html
+++ b/index.html
@@ -842,6 +842,12 @@
                         </button>
                     </div>
                     <div class="options-modal__group">
+                        <span class="options-modal__label" data-i18n-key="options.recording.label">Recording</span>
+                        <button id="recording-toggle" class="options-modal__action" type="button" aria-pressed="true">
+                            Recording on
+                        </button>
+                    </div>
+                    <div class="options-modal__group">
                         <button id="exit-game" class="options-modal__action options-modal__action--danger" type="button" data-i18n-key="options.exit">
                             Exit game
                         </button>
