update recording state (mk btns more space efficient)

--- a/index.html
+++ b/index.html
@@ -756,8 +756,10 @@
             <div id="recording-board" class="recording-state__board" aria-live="polite"></div>
             <p class="recording-state__hint">Auto play the timeline or step through each snapshot.</p>
             <div class="recording-state__controls">
-                <button id="recording-prev" class="recording-state__control" type="button">Prev</button>
-                <button id="recording-next" class="recording-state__control" type="button">Next</button>
+                <div class="recording-state__control-group">
+                    <button id="recording-prev" class="recording-state__control" type="button">Prev</button>
+                    <button id="recording-next" class="recording-state__control" type="button">Next</button>
+                </div>
                 <button id="recording-auto" class="recording-state__control recording-state__control--primary" type="button">
                     Auto play
                 </button>
