update recording state

--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
                 <div class="recording-state__heading">
                     <div class="recording-state__heading-text">
                         <h3 class="recording-state__title">Recorded gameplay</h3>
-                        <div class="recording-state__mode-row">
+                        <div id="recording-mode-row" class="recording-state__mode-row">
                             <span id="recording-match-count-container" class="recording-state__match-count">
                                 <img
                                     src="assets/images/cell.svg"
