update recording state (use own css file)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="css/shop.css" />
     <link rel="stylesheet" href="css/account.css" />
     <link rel="stylesheet" href="css/tutorial.css" />
+    <link rel="stylesheet" href="css/recording-state.css" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script type="module" src="dist/main.js"></script>
 </head>
