update progress bar:hold number inside

--- a/index.html
+++ b/index.html
@@ -639,10 +639,10 @@
         <div class="hud__progress">
             <div id="score-progress" class="hud__progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="300" aria-valuenow="0">
                 <div id="score-progress-fill" class="hud__progress-fill"></div>
+                <span class="hud__progress-value">
+                    <span id="score" class="hud__value-strong">0/300</span>
+                </span>
             </div>
-            <span class="hud__text">
-                <span id="score" class="hud__value-strong">0/300</span>
-            </span>
         </div>
         </div>
 
